<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weatherapp.ui.today.TodayFragment"
        android:label="@string/today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.weatherapp.ui.week.WeekFragment"
        android:label="@string/week"
        tools:layout="@layout/fragment_week" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.weatherapp.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>